--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -18,7 +18,6 @@ jobs:
         include:
           - os: ubuntu-20.04
             name: Linux
-            cache-key: linux
             cmake-args: '-DPIMORONI_PICO_PATH=$GITHUB_WORKSPACE/pimoroni-pico -DPICO_SDK_PATH=$GITHUB_WORKSPACE/pico-sdk -DCMAKE_INSTALL_PREFIX=$GITHUB_WORKSPACE/install'
             apt-packages: clang-tidy gcc-arm-none-eabi libnewlib-arm-none-eabi libstdc++-arm-none-eabi-newlib
 
@@ -31,45 +30,49 @@ jobs:
 
     steps:
     - name: Checkout Code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       with:
         path: project
 
-    # Checkout the Pimoroni Pico Libraries
-    - name: Checkout Pimoroni Pico Libraries
-      uses: actions/checkout@v2
-      with:
-        repository: pimoroni/pimoroni-pico
-        path: pimoroni-pico
-
     # Checkout the Pico SDK
     - name: Checkout Pico SDK
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       with:
         repository: raspberrypi/pico-sdk
         path: pico-sdk
         submodules: true
 
-    # Linux deps
-    - name: Install deps
+    # Checkout the Pimoroni Pico Libraries
+    - name: Checkout Pimoroni Pico Libraries
+      uses: actions/checkout@v3
+      with:
+        repository: pimoroni/pimoroni-pico
+        path: pimoroni-pico
+
+    # Install the cross-compiler and any other dependencies
+    - name: Install Dependencies
       if: runner.os == 'Linux'
       run: |
         sudo apt update && sudo apt install ${{matrix.apt-packages}}
 
+    # Create the build directory
     - name: Create Build Environment
       run: cmake -E make_directory ${{runner.workspace}}/build
 
+    # Ask CMake to configure the build scripts
     - name: Configure CMake
       shell: bash
       working-directory: ${{runner.workspace}}/build
       run: cmake $GITHUB_WORKSPACE/project -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCPACK_PACKAGE_FILE_NAME=${{env.RELEASE_FILE}} ${{matrix.cmake-args}}
 
-    - name: Build
+    # Compile the project
+    - name: Build Project
       working-directory: ${{runner.workspace}}/build
       shell: bash
       run: |
         cmake --build . --config $BUILD_TYPE -j 2
 
+    # Only on releases - assemble the distributable ZIP file
     - name: Build Release Packages
       if: github.event_name == 'release'
       working-directory: ${{runner.workspace}}/build
@@ -77,24 +80,10 @@ jobs:
       run: |
         cmake --build . --config $BUILD_TYPE --target package -j 2
 
-    - name: Upload .zip
+    # Attach the ZIP file from the previous step, to the Github release
+    - name: Attach Release Packages
       if: github.event_name == 'release'
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      uses: softprops/action-gh-release@v1
       with:
-        asset_path: ${{runner.workspace}}/build/${{env.RELEASE_FILE}}.zip
-        upload_url: ${{github.event.release.upload_url}}
-        asset_name: ${{env.RELEASE_FILE}}.zip
-        asset_content_type: application/zip
-
-    - name: Upload .tar.gz
-      if: github.event_name == 'release'
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-      with:
-        asset_path: ${{runner.workspace}}/build/${{env.RELEASE_FILE}}.tar.gz
-        upload_url: ${{github.event.release.upload_url}}
-        asset_name: ${{env.RELEASE_FILE}}.tar.gz
-        asset_content_type: application/octet-stream
+        files: |
+          ${{runner.workspace}}/build/*.zip 
