First pass of usbfs imported, with FatFS stubs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,31 +26,34 @@ add_executable(${NAME}
     main.cpp # <-- Add source files here!
 )
 
-# Include any required libraries; this makes their headers available to your code
-
-
-# To include any Pimoroni specific ones, these includes assume 
-# `pimoroni-pico` is stored alongside your project as per the guide.
-#include(common/pimoroni_i2c)
-#include(common/pimoroni_bus)
-#include(libraries/bitmap_fonts/bitmap_fonts)
-#include(libraries/hershey_fonts/hershey_fonts)
-#include(libraries/pico_explorer/pico_explorer)
-
 # We need to explicitly include any headers within our own project
 target_include_directories(${NAME} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
 
-# Define the libraries needed to link; we start with the ones we always
+
+# Add in libraries that are kept in subdirectories (like our USB Mass Storage
+# handling, usbfs) - add the subdirectory, and then attach the library to target.
+# If you're not using usbfs, you can remove this section.
+add_subdirectory(usbfs)
+target_link_libraries(${NAME} 
+    usbfs
+)
+
+
+# Pimoroni libraries are done a little differently; use include for each library
+# and it will get pulled in from `pimoroni-pico` as stored alongside your project.
+# After that it's linked as a library as normal.
+#include(libraries/pico_explorer/pico_explorer)
+#target_link_libraries(${NAME}
+#    pico_explorer # <-- List libraries here!
+#)
+
+
+# Add in the standard Pico libraries that we will always need.
 # need for any PicoW project
 target_link_libraries(${NAME} 
     pico_stdlib pico_cyw43_arch_lwip_threadsafe_background
 )
 
-# And now any project specific requires, such as Pimoroni libraries
-target_link_libraries(${NAME}
-#    pimoroni_i2c
-#    pico_explorer # <-- List libraries here!
-)
 
 # Ensure that we get a uf2 output
 pico_add_extra_outputs(${NAME})
