--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
-title: PicoW C++ Boilerplate
-description: A quickstart C++ / CMake project for PicoW development
+title: PicoW C/C++ Boilerplate
+description: A quickstart C(++) / CMake project for PicoW development
 theme: jekyll-theme-tactile
