Moved config into opt/ directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,8 +23,8 @@ pico_sdk_init()
 
 # Define the source files
 add_executable(${NAME}
-    main.cpp # <-- Add source files here!
-    config.c
+    opt/config.c           # <-- Configuration file handler (optional)
+    main.cpp               # <-- Start adding your own code here!
 )
 
 # We need to explicitly include any headers within our own project
