Added httpclient library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,7 +53,8 @@ target_link_libraries(${NAME}
 # Add in the standard Pico libraries that we will always need.
 # need for any PicoW project
 target_link_libraries(${NAME} 
-    pico_stdlib pico_cyw43_arch_lwip_threadsafe_background
+    pico_stdlib pico_cyw43_arch_lwip_threadsafe_background 
+    pico_lwip_mbedtls pico_mbedtls
 )
 
 
